tests/paczka1/fuzzy1/79503245.err
Error in line 4: A55 A55 48,0
Error in line 5: A55 A559 63,0
Error in line 24: rO32PS A635 17,7
Error in line 38: 3ZTp A559 67,8
